Generate card IDs from German and Hungarian to support multiple meanings
This change allows words like "die Bank" to have different cards for
different meanings (bank vs bench) by including Hungarian translation
in the ID generation.

Key changes:
- Card IDs now use format: german-base-hungarian-base (e.g., bank-bank)
- Articles (der/die/das, a/az) are removed from ID generation
- Known words now store IDs instead of German words
- Import supports "German - Hungarian" format (e.g., "die Bank - a bank")
- Existence check uses prefix matching to show if any card exists for a word
- Frontend checks for known words after translation is obtained